// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ReposterAvatar - Snapshots > matches snapshot with negative margin (index > 0) 1`] = `
<div
  class="size-8 shrink-0 -ml-2"
  data-avatar-url="https://example.com/avatar.jpg"
  data-name="John Doe"
  data-size="sm"
  data-testid="avatar-with-fallback"
>
  John Doe
</div>
`;

exports[`ReposterAvatar - Snapshots > matches snapshot with user details and avatar URL 1`] = `
<div
  class="size-8 shrink-0"
  data-avatar-url="https://example.com/avatar.jpg"
  data-name="John Doe"
  data-size="sm"
  data-testid="avatar-with-fallback"
>
  John Doe
</div>
`;

exports[`ReposterAvatar - Snapshots > matches snapshot without user details 1`] = `
<div
  class="size-8 shrink-0"
  data-name="user-456"
  data-size="sm"
  data-testid="avatar-with-fallback"
>
  user-456
</div>
`;
